# Hpt

./: .gitignore  404.html  Cargo.toml  LICENSE-MIT  README.md  index.html  main.c  package-lock.json  package.json  publish.ps1  test  tsconfig.json
hpt/: Cargo.toml  README.md
hpt-allocator/: Cargo.toml
hpt-allocator/src/: backend.rs  lib.rs  ptr.rs  traits.rs
hpt-allocator/src/allocators/: cpu.rs  cuda.rs
hpt-allocator/src/storage/: cpu.rs  cuda.rs  mod.rs
hpt-allocator/src/utils/: allocate.rs  cache_resize.rs  deallocate.rs  forget.rs
hpt-bench/: Cargo.toml  scan_benchmarks_result.py
hpt-bench/benches/: benchmarks_main.rs
hpt-bench/benches/benchmarks/: mod.rs
hpt-bench/src/: main.rs
hpt-codegen/: Cargo.toml
hpt-codegen/src/fuse/: cfg.rs  cfg_builder.rs  dead_node_elimination.rs  expr_ty.rs  fuse.rs  gen_fuse.rs  kernel_type.rs  operator_lists.rs  phi_function.rs  start.rs  use_define_visitor.rs
hpt-common/: Cargo.toml
hpt-common/src/: lib.rs  prg_update.rs  slice.rs
hpt-common/src/axis/: axis.rs
hpt-common/src/error/: base.rs  common.rs  device.rs  kernel.rs  memory.rs  mod.rs  onnx.rs  param.rs  random.rs  shape.rs
hpt-common/src/layout/: layout.rs  layout_utils.rs
hpt-common/src/shape/: shape.rs  shape_utils.rs
hpt-common/src/strides/: strides.rs
hpt-common/src/utils/: conv_algos.rs  pointer.rs  tensordot_args.rs
hpt-conv/: Cargo.toml
hpt-conv/src/: lib.rs  microkernel_trait.rs  microkernels.rs
hpt-conv/src/type_kernels/: common.rs  cplx32_kernels.rs  cplx64_kernels.rs  f16_kernels.rs  f32_kernels.rs  f64_kernels.rs  i16_kernels.rs  i64_kernels.rs  i8_kernels.rs  u64_kernels.rs
hpt-cudakernels/: .gitignore  Cargo.toml  build.rs
hpt-cudakernels/src/: all.cu  any.cu  argmax.cu  argmin.cu  creation.cu  cutlass_gemm.cu  dropout.cu  matmul.cu  prod.cu  reduce.cu  reduce2.cu  reducel1.cu  reginfo.rs  set_val.cu  strided_copy.cu  sum.cu  type_cast.cuh  type_cast.h
hpt-cudakernels/src/binary/: add.cu  binary_classes.cuh  binary_template.cuh  bitand.cu  bitor.cu  bitxor.cu  cmp.cu  div.cu  mul.cu  rem.cu  shl.cu  shr.cu  sub.cu
hpt-cudakernels/src/conv2d/: conv2d_batchnorm.cu
hpt-cudakernels/src/normalization/: layernorm.cu  layernorm_post.cu  softmax.cu
hpt-cudakernels/src/pooling/: pooling_template.cuh
hpt-cudakernels/src/reduce/: all.cu  any.cu  arg_template.cuh  argmax.cu  argmin.cu  block_reduce.cuh  declare_macros.cuh  logsumexp.cu  (+14 more)
hpt-dataloader/: Cargo.toml
hpt-dataloader/src/: compression_trait.rs  data_loader.rs  lib.rs  load.rs  save.rs  utils.rs
hpt-display/: Cargo.toml
hpt-display/src/: display.rs  formats.rs
hpt-dyn/: Cargo.toml  build.rs
hpt-dyn/src/: lib.rs  tensor.rs
hpt-examples/: Cargo.toml
hpt-iterator/: Cargo.toml
hpt-iterator/src/: iterator_traits.rs  lib.rs  par_strided.rs  par_strided_fold.rs  par_strided_map.rs  par_strided_map_mut.rs  par_strided_mut.rs  par_strided_zip.rs  shape_manipulate.rs  strided.rs  strided_map.rs  strided_map_mut.rs  strided_mut.rs  strided_zip.rs  with_simd.rs
hpt-macros/: Cargo.toml
hpt-macros/src/: binary_float_out.rs  conv2d.rs  float_unary.rs  from_scalar.rs  into_cuda_scalar.rs  into_scalar.rs  kernel_gen_helper.rs  lib.rs  matmul_microkernels_asm.rs  normal_out.rs  normal_out_unary.rs  scalar_convert.rs  simd_bitwise.rs  simd_cmp.rs  simd_eval.rs  simd_float_out_binary.rs  simd_float_out_unary.rs  simd_normal_out.rs  simd_normal_unary.rs  type_utils.rs
hpt-matmul/: Cargo.toml
hpt-matmul/src/: lib.rs  matmul.rs  microkernel_trait.rs  microkernels.rs  template.rs  utils.rs
hpt-tests/: Cargo.toml
hpt-tests/src/: lib.rs
hpt-traits/: Cargo.toml
hpt-traits/src/: lib.rs  random.rs  shape_manipulate.rs  tensor.rs
hpt-types/: Cargo.toml
hpt-types/src/: convertion.rs  dtype.rs  into_scalar.rs  into_vec.rs  lib.rs  type_promote.rs
hpt/src/: backend.rs  lib.rs  tensor.rs  tensor_base.rs  to_tensor.rs
tensor-bench/: Cargo.toml
tensor-bench/benches/: benchmarks_main.rs  cumsum.rs  hamming_window.rs  selu.rs  sin.rs  softmax.rs  topk.rs
tensor-bench/src/: main.rs
tensor-codegen/: Cargo.toml
tensor-codegen/src/: lib.rs
tensor-common/: Cargo.toml
tensor-common/src/: axis.rs  block_info.rs  block_manager.rs  err_handler.rs  layout.rs  lib.rs  pointer.rs  prg_update.rs  shape.rs  shape_utils.rs  simd_ref.rs  slice.rs  strides.rs  strides_utils.rs  tensordot_args.rs
tensor-compiler/: Cargo.toml
tensor-compiler/src/: arcstring.rs  build.rs  edges.rs  float.rs  for_stmt.rs  ir_cmp.rs  iter_val.rs  iter_var.rs  lib.rs  op.rs  opt_lvl.rs  registry.rs  seq_stmt.rs  store_stmt.rs  tensor.rs  tests.rs  to_prim_expr.rs  traits.rs
tensor-dataloader/: Cargo.toml
tensor-dataloader/src/: compression_trait.rs  data_loader.rs  lib.rs  load.rs  load_compressed_slice.rs  save.rs
tensor-dyn/: Cargo.toml
tensor-dyn/src/: backend.rs  lib 2.rs  lib.rs  random.rs  slice.rs  tensor.rs  tensor_base.rs  to_tensor.rs
tensor-examples/: Cargo.toml
tensor-examples/src/: main.rs
tensor-iterator/: Cargo.toml
tensor-iterator/src/: iterator_traits.rs  lib.rs  par_strided.rs  par_strided_fold.rs  par_strided_map.rs  par_strided_map_mut.rs  par_strided_mut.rs  par_strided_zip.rs  shape_manipulate.rs  strided.rs  strided_map.rs  strided_map_mut.rs  strided_mut.rs  strided_zip.rs  with_simd.rs
tensor-macros/: Cargo.toml
tensor-macros/src/: binary_float_out.rs  conv2d.rs  float_unary.rs  from_scalar.rs  into_cuda_scalar.rs  into_scalar.rs  into_vec.rs  kernel_gen_helper.rs  lib.rs  list_enum.rs  normal_out.rs  normal_out_unary.rs  scalar_convert.rs  simd_bitwise.rs  simd_cmp.rs  simd_convert.rs  simd_eval.rs  simd_float_out_binary.rs  simd_float_out_unary.rs  simd_normal_out.rs  simd_normal_unary.rs  type_utils.rs
tensor-tests/: Cargo.toml
tensor-tests/src/: lib.rs
tensor-tests/tests/: tests.rs
tensor-traits/: Cargo.toml
tensor-traits/src/: lib.rs  random.rs  shape_manipulate.rs  tensor.rs
tensor-types/: Cargo.toml
tensor-types/src/: convertion.rs  dtype.rs  into_scalar.rs  into_vec.rs  lib.rs  type_promote.rs  vector_convert.rs  vectors.rs
(+27313 files in other folders)
