[package]
name = "hpt-workspace"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "hpt-allocator",
    "hpt-common",
    "hpt",
    "hpt-traits",
    "hpt-types",
    "hpt-macros",
    "hpt-iterator",
    "hpt-display",
    "hpt-bench",
    "hpt-tests",
    "hpt-dataloader",
    "hpt-codegen",
    "hpt-cudakernels",
    "hpt-examples",
    "hpt-dyn", "hpt-matmul", "hpt-conv",
]

exclude = ["hpt-bench", "hpt-tests", "hpt-codegen", "hpt-examples"]

[dependencies]
hpt = { path = "./hpt", features = ["track_caller"] }
anyhow = { workspace = true }
# rand = { workspace = true }
# ndarray = { workspace = true }
# candle-core = { workspace = true }
hpt-dyn = { path = "./hpt-dyn", features = ["f32", "i64"] }
spindle = { workspace = true}
env_logger = { workspace = true }
log = { workspace = true }

[workspace.dependencies]
once_cell = "1.21.1"
ctor = "0.4.1"
seq-macro = "0.3.6"
paste = "1.0.15"
cache-size = "0.7.0"
duplicate = {version = "2.0.0", features = ["pretty_errors"]}
lazy_static = "1.5.0"
threadpool = "1.8.1"
raw-cpuid = { version = "11.2", default-features = false }
dyn-stack = { version = "0.13", default-features = false, features = ["alloc"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
rayon = "1.10.0"
half = { version = "2.3.1", features = ["num-traits", "rand_distr", "serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
libm = "0.2.11"
rand_distr = "0.5.1"
num = "0.4.3"
syn = { version = "2.0.100", features = ["full"] }
quote = "1.0.40"
regex = "1.11.1"
bytemuck = "1.22.0"
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
safetensors = "0.5.3"
flate2 = "1.1.0"
indicatif = "0.17.11"
serde_json = "1.0.140"
zip = "2.4.0"
thiserror = "2.0.12"
petgraph = "0.8.1"
cudarc = { version = "0.13.4", default-features = false, features = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "cudnn",
    "driver",
    "nvrtc",
    "f16",
    "cuda-version-from-build-system",
    "dynamic-linking",
    "runtime",
] }
anyhow = "1.0.97"
lru = "0.13.0"
num_cpus = "1.16.0"
walkdir = "2.5.0"
phf_codegen = "0.11.3"
phf = "0.11.3"
rustfft = "6.2.0"
gemm = { version = "0.18.2", features = ["rayon", "nightly"] }
gemm-common = "0.18.2"
rand = "0.9.0"
ndarray-rand = "0.15.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
candle-core = { version = "0.8.4", features = ["mkl"] }
candle-nn = "0.8.4"
gnuplot = "0.0.45"
criterion = { version = "0.5.1", features = ["html_reports"] }
tch = { version = "0.17.0", features = ["download-libtorch"] }
spindle = "0.2.2"
prost = "0.13.5"
prost-types = "0.13.5"
urlencoding = "2.1.0"
log = "0.4.27"
env_logger = "0.11.8"
num_enum = "0.7"
num-integer = "0.1"
crossbeam = "0.8.4"
core_affinity = "0.8.3"
libc = "0.2.172"
dashmap = "6.1.0"

[[bin]]
name = "hpt-workspace"
path = "src/main.rs"

[profile.release]
opt-level = 3
incremental = true
debug = true
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 0
incremental = true
debug = true

[profile.test]
opt-level = 0
incremental = true
debug = true
