[package]
name = "hpt-allocator"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lru = "0.12.3"
once_cell = "1.19.0"
lazy_static = "1.4.0"
hashbrown = "0.14.3"
ctor = "0.2.8"
anyhow = "1.0.75"
cudarc = {version = "0.12.1", optional = true}
hpt-common = {path = "../hpt-common", version = "0.0.1"}

[features]
cuda = ["cudarc"]
track_caller = []
