[package]
name = "hpt-allocator"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An internal library for memory allocator for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
lru = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
ctor = { workspace = true }
cudarc = { workspace = true, optional = true }
hpt-common = { path = "../hpt-common", version = "0.1.1" }

[features]
cuda = ["cudarc"]
track_caller = []
