[package]
name = "hpt-bench"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tch = { workspace = true }
hpt = { path = "../hpt" }
# hpt-dyn = { path = "../hpt-dyn" }
criterion = { workspace = true }
half = { workspace = true }
gnuplot = { workspace = true }
num_cpus = { workspace = true }
paste = { workspace = true }
rayon = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
libm = { workspace = true }
spindle = { workspace = true }

[features]
fft = []
maxpool = []
softmax = []
hamming = []
unary = []
matmul = []
conv = []
reduction = []
prod = []
random = []
binary = []
broadcast = []
selu = []
sin = []
cos = []
tan = []
asin = []
acos = []
atan = []
sinh = []
cosh = []
tanh = []
asinh = []
acosh = []
atanh = []
sigmoid = []
exp = []
cat = []
log = []
relu = []
leaky_relu = []
elu = []
softplus = []
softsign = []
hard_sigmoid = []
swish = []
mish = []
sum = []
relu6 = []
gelu = []
celu = []
log10 = []
log2 = []
exp2 = []
sqrt = []
neg = []
square = []
abs = []
ceil = []
sign = []
clip = []
recip = []
conv2d = []
f32 = []
add = []
add_broadcast = []
default = [
    "fft",
    "maxpool",
    "add_broadcast",
    "add",
    "hamming",
    "f32",
    "conv2d",
    "recip",
    "clip",
    "sign",
    "ceil",
    "abs",
    "square",
    "neg",
    "sqrt",
    "exp2",
    "log2",
    "log10",
    "celu",
    "gelu",
    "unary",
    "matmul",
    "conv",
    "reduction",
    "random",
    "binary",
    "broadcast",
    "selu",
    "sin",
    "cos",
    "tan",
    "asin",
    "acos",
    "atan",
    "sinh",
    "cosh",
    "tanh",
    "asinh",
    "acosh",
    "atanh",
    "sigmoid",
    "exp",
    "log",
    "relu",
    "leaky_relu",
    "elu",
    "softplus",
    "softsign",
    "hard_sigmoid",
    "swish",
    "mish",
    "cat",
    "sum",
    "prod",
    "softmax",
]

[[bench]]
name = "main"
path = "benches/benchmarks_main.rs"
harness = false
