[package]
name = "hpt-codegen"
version = "0.0.15"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "2.0.82", default-features = false, features = [
    "derive",
    "full",
    "visit",
    "visit-mut",
    "extra-traits"
] }
quote = "1.0.36"
regex = "1.11.0"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
prettyplease = "=0.2.25"
anyhow = "1.0.75"
petgraph = "0.6.5"
thiserror = "2.0.4"

[lib]
proc-macro = true

[package.metadata.rust-analyzer]
rustc_private = true
proc_macro_srv = true
