[package]
name = "hpt-codegen"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "2.0.82", default-features = false, features = [
    "derive",
    "full",
    "visit",
    "visit-mut",
    "extra-traits"
] }
quote = { workspace = true }
regex = { workspace = true }
proc-macro2 = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[lib]
proc-macro = true

[package.metadata.rust-analyzer]
rustc_private = true
proc_macro_srv = true
