[package]
name = "hpt-common"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hpt-types = { path = "../hpt-types", version = "0.0.1" }
anyhow = "1.0.75"
thiserror = "1.0.63"
serde = { version = "1.0", features = ["derive", "rc"] }
cudarc = { version = "0.12.1", optional = true, features = [
    "cuda-12010",
    "f16",
] }
rand_distr = "0.4.3"

[features]
track_caller = []
bound_check = []
cuda = ["cudarc"]
