[package]
name = "hpt-common"
version = "0.0.12"
edition = "2021"
description = "A library for common utilities for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"
license = "MIT OR Apache-2.0"

[dependencies]
hpt-types = { path = "../hpt-types", version = "0.0.12" }
anyhow = "1.0.95"
thiserror = "1.0.63"
serde = { version = "1.0", features = ["derive", "rc"] }
cudarc = { version = "0.13.4", optional = true, features = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "nvrtc",
    "f16",
    "cuda-version-from-build-system",
    "dynamic-linking",
], default-features = false }
rand_distr = "0.4.3"

[features]
track_caller = []
bound_check = []
cuda = ["cudarc"]
