[package]
name = "hpt-common"
version = "0.1.2"
edition = "2021"
description = "An internal library for common utilities for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"
license = "MIT OR Apache-2.0"

[dependencies]
hpt-types = { path = "../hpt-types", version = "0.1.1" }
thiserror = { workspace = true }
serde = { workspace = true }
cudarc = { workspace = true, optional = true }
rand_distr = { workspace = true }

[features]
track_caller = []
bound_check = []
cuda = ["cudarc"]
