[package]
name = "hpt-cudakernels"
version = "0.0.11"
edition = "2021"
description = "A library implements cuda kernels for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"
license = "MIT OR Apache-2.0"

[dependencies]
phf = { version = "0.11.3", default-features = false }

[build-dependencies]
phf = { version = "0.11.3", default-features = false }
phf_codegen = "0.11.3"
regex = "1.11.1"

[lib]
path = "src/lib.rs"
required-features = ["cuda"]

[features]
default = []
cuda = []