[package]
name = "hpt-cudakernels"
version = "0.0.23"
edition = "2021"
description = "A library implements cuda kernels for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"
license = "MIT OR Apache-2.0"

[dependencies]
phf = { workspace = true }

[build-dependencies]
phf = { workspace = true }
phf_codegen = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }

[lib]
path = "src/lib.rs"
required-features = ["cuda"]

[features]
default = []
cuda = []
