[package]
name = "hpt-dataloader"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
zip = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hpt-traits = { path = "../hpt-traits" }
hpt-types = { path = "../hpt-types" }
hpt-macros = { path = "../hpt-macros" }
hpt-common = { path = "../hpt-common" }
anyhow = {version = "1.0.75" }
indicatif = "0.17.7"
flate2 = "1.0.28"
num = "0.4"
safetensors = "0.5.0"