[package]
name = "hpt-dataloader"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for data loading for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
zip = "0.6.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
hpt-traits = { path = "../hpt-traits", version = "0.0.1" }
hpt-types = { path = "../hpt-types", version = "0.0.1" }
hpt-macros = { path = "../hpt-macros", version = "0.0.1" }
hpt-common = { path = "../hpt-common", version = "0.0.1" }
anyhow = {version = "1.0.95" }
indicatif = "0.17.11"
flate2 = "1.0.35"
num = "0.4.3"
safetensors = "0.5.2"