[package]
name = "hpt-dataloader"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An internal library for data loading for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
zip = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hpt-traits = { path = "../hpt-traits", version = "0.1.1" }
hpt-types = { path = "../hpt-types", version = "0.1.1" }
hpt-common = { path = "../hpt-common", version = "0.1.1" }
indicatif = { workspace = true }
flate2 = { workspace = true }
num = { workspace = true }
safetensors = { workspace = true }
bytemuck = { workspace = true }
