[package]
name = "hpt-display"
version = "0.0.23"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An internal library for displaying tensors"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
hpt-traits = { path = "../hpt-traits", version = "0.0.23" }
hpt-common = { path = "../hpt-common", version = "0.0.23" }
hpt-types = { path = "../hpt-types", version = "0.0.23" }
num-complex = { workspace = true }
