[package]
name = "hpt-dyn"
version = "0.1.0"
edition = "2024"

[dependencies]
half = { workspace = true }
num-complex = { workspace = true }
paste = { workspace = true }
num-traits = { workspace = true }
hpt-types = { path = "../hpt-types", version = "0.1.1" }
hpt-macros = { path = "../hpt-macros", version = "0.1.1" }
hpt-common = { path = "../hpt-common", version = "0.1.1" }
hpt-traits = { path = "../hpt-traits", version = "0.1.1" }
hpt-allocator = { path = "../hpt-allocator", version = "0.1.1" }
hpt-display = { path = "../hpt-display", version = "0.1.1" }
hpt-iterator = { path = "../hpt-iterator", version = "0.1.1" }
cudarc = { workspace = true, optional = true }
seq-macro = { workspace = true }
rayon = { workspace = true }
duplicate = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
gemm-common = { workspace = true}
dyn-stack = { workspace = true}
num_cpus = { workspace = true }
num = { workspace = true }
ctor = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
prost-build = "0.13.5"

[features]
default = []
cuda = [
    "cudarc",
    "hpt-allocator/cuda",
    "hpt-common/cuda",
    "hpt-types/cuda",
    "hpt-macros/cuda",
]
bound_check = ["hpt-common/bound_check"]