[package]
name = "hpt-examples"
version = "0.0.15"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0.217"
rayon = "1.8.0"
hpt = { path = "../hpt", features = ["track_caller"] }
anyhow = "1.0.40"
mimalloc = "0.1.43"
candle-core = { version = "0.8.2", features = ["mkl"] }
candle-nn = "0.8.2"
serde_json = "1.0"
safetensors = "0.5.0"

[profile.release]
opt-level = 3
incremental = true
debug = true
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 0
incremental = false
debug = true
# lto = "fat"
# codegen-units = 1

[profile.test]
opt-level = 0
incremental = false
debug = true
# lto = "fat"
# codegen-units = 1
