[package]
name = "hpt-iterator"
version = "0.0.23"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An internal library implements iterator for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
hpt-common = { path = "../hpt-common", version = "0.0.23" }
hpt-traits = { path = "../hpt-traits", version = "0.0.23" }
hpt-types = { path = "../hpt-types", version = "0.0.23" }
rayon = { workspace = true }

[features]
track_caller = []
bound_check = []
