[package]
name = "hpt-macros"
version = "0.0.12"
edition = "2021"
description = "A library for generating helper functions for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"
license = "MIT OR Apache-2.0"

[dependencies]
syn = "2.0.98"
quote = "1.0.38"
regex = "1.11.1"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
anyhow = "1.0.95"

[features]
cuda = []

[lib]
proc-macro = true

[package.metadata.rust-analyzer]
rustc_private = true
proc_macro_srv = true
