[package]
name = "hpt-macros"
version = "0.0.23"
edition = "2021"
description = "An internal library for generating helper functions for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
proc-macro2 = { workspace = true }

[features]
cuda = []

[lib]
proc-macro = true

[package.metadata.rust-analyzer]
rustc_private = true
proc_macro_srv = true
