[package]
name = "hpt-matmul"
version = "0.1.0"
edition = "2024"

[dependencies]
half = { workspace = true }
num-complex = { workspace = true }
seq-macro = { workspace = true }
num-traits = { workspace = true }
dyn-stack = { workspace = true }
gemm-common = { workspace = true }
spindle = { workspace = true }
duplicate = { workspace = true }
num-integer = { workspace = true }

[features]
default = ["f32"]

bool = []
f32 = []
f16 = []
bf16 = []
f64 = []
i8 = []
u8 = []
i16 = []
u16 = []
i32 = []
u32 = []
i64 = []
u64 = []
cplx32 = []
cplx64 = []
