
[package]
name = "hpt-tests"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hpt-macros = { path = "../hpt-macros" }
hpt-common = { path = "../hpt-common" }
hpt = { path = "../hpt", features = ["track_caller", "bound_check"] }
hpt-codegen = { path = "../hpt-codegen" }
hpt-types = { path = "../hpt-types" }
serde_json = "1"
tch = { version = "0.17.0", features = ["download-libtorch"] }
anyhow = "1.0.75"
rayon = { version = "1.10.0", default-features = false }
paste = "1.0.15"
candle-core = "0.7.2"
macrotest = "1.0.13"
rand = "0.8.5"
num-traits = "0.2.19"
num-complex = "0.4"
libm = "0.2.11"
duplicate = "2.0.0"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }

[features]
cuda = ["hpt/cuda"]

[profile.dev]
opt-level = 0
incremental = true
debug = true

[profile.release]
opt-level = 0
incremental = true
debug = true

[profile.test]
opt-level = 0
incremental = true
debug = true
