
[package]
name = "hpt-tests"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hpt-common = { path = "../hpt-common" }
hpt = { path = "../hpt", features = ["track_caller", "bound_check", "cuda"] }
hpt-types = { path = "../hpt-types" }
serde_json = { workspace = true }
tch = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
paste = { workspace = true }
candle-core = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
libm = { workspace = true }
duplicate = { workspace = true }
half = { workspace = true }

[features]
cuda = ["hpt/cuda"]
default = ["cuda"]

[profile.dev]
opt-level = 0
incremental = true
debug = true

[profile.release]
opt-level = 0
incremental = true
debug = true

[profile.test]
opt-level = 0
incremental = true
debug = true
