[package]
name = "hpt-traits"
version = "0.0.11"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library defines tensor operator traits for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
hpt-common = { path = "../hpt-common", version = "0.0.11" }
hpt-types = { path = "../hpt-types", version = "0.0.11" }
anyhow = "1.0.95"
num = "0.4"
rand_distr = "0.4.3"

[features]
track_caller = []
stdsimd = ["hpt-types/stdsimd"]
archsimd = ["hpt-types/archsimd"]
default = ["track_caller", "archsimd"]
