[package]
name = "hpt-traits"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An internal library defines tensor operator traits for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
hpt-common = { path = "../hpt-common", version = "0.1.1" }
hpt-types = { path = "../hpt-types", version = "0.1.1" }
num = { workspace = true }
rand_distr = { workspace = true }

[features]
track_caller = []
default = ["track_caller"]
