[package]
name = "hpt-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hpt-macros = { path = "../hpt-macros" }
num-complex = "0.4"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
paste = "1.0.15"
num-traits = "0.2.19"
sleef = { version = "0.3.2", optional = true }
libm = "0.2.11"
serde = "1.0.217"

[features]
f16c = []
stdsimd = ["dep:sleef"]
archsimd = []
cuda = []
default = ["f16c", "archsimd", "normal_promote"]
normal_promote = []