[package]
name = "hpt-types"
version = "0.0.12"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library define primitive types functions for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
hpt-macros = { path = "../hpt-macros", version = "0.0.12" }
num-complex = "0.4"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
paste = "1.0.15"
num-traits = "0.2.19"
sleef = { version = "0.3.2", optional = true }
libm = "0.2.11"
serde = "1.0.217"

[features]
stdsimd = ["dep:sleef"]
archsimd = []
cuda = []
default = ["archsimd", "normal_promote"]
normal_promote = []