[package]
name = "hpt-types"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An internal library define primitive types functions for hpt"
authors = ["JianJian Li <ljj1849532909@gmail.com>"]
repository = "https://github.com/Jianqoq/Hpt"

[dependencies]
hpt-macros = { path = "../hpt-macros", version = "0.1.1" }
num-complex = { workspace = true }
half = { workspace = true }
paste = { workspace = true }
num-traits = { workspace = true }
libm = { workspace = true }
serde = { workspace = true }

[features]
cuda = []
default = ["normal_promote"]
normal_promote = []
